--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.37.0",
     "typescript": "^5.3.3",
     "vite": "^6.0.0",
     "vitest": "^1.2.2"
