Added Youtube Search as source

--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,36 @@
-# Dependency directories
-node_modules/
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Production build directory
-dist/
-build/
+# Dependencies
+node_modules
+dist
+dist-ssr
+*.local
 
-# Environment files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 .env.development
-.env.staging
+.env.test
 .env.production
-*.env
+.env.*.local
 
-# Typescript build output
-*.tsbuildinfo
-
-# Logs
-logs/
-*.log
-
-# macOS system files
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Temporary files
-*.tmp
-*.bak
-
-# Misc
-.cache/
-.next/
-.nuxt/
-.vercel/
+# Keep example environment file
+!.env.example
