Added Bluesky as a source

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ VITE_FORUM_API_KEY=your-forum-api-key
 VITE_YOUTUBE_API_TOKEN=your-youtube-api-token
 VITE_YOUTUBE_CHANNEL_ID=your-youtube-channel-id
 VITE_YOUTUBE_KEYWORDS=keyword1, keyword2
+
+# BlueSky Configuration
+VITE_BLUESKY_IDENTIFIER=your-handle.bsky.social
+VITE_BLUESKY_APP_PASSWORD=your-app-password
