--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,8 @@
 VITE_AI_MODEL=your-ai-model-name
 VITE_OPENROUTER_API_KEY=your-openrouter-api-key
 
-# Spryker RSS Feed Configuration
-RSS_FEED_1_NAME=GA Alert - #1
-RSS_FEED_1_URL=your-rss-feed-url
-RSS_FEED_2_NAME=GA Alert - #2
-RSS_FEED_2_URL=your-rss-feed-url
-RSS_FEED_3_NAME=Company name
-RSS_FEED_3_URL=your-rss-feed-url
+# RSS Feed Configuration
+VITE_RSS_FEEDS=https://feed1.com/rss,https://feed2.com/rss,https://feed3.com/rss
 
 # Spryker API Keys
 VITE_FORUM_API_URL=your-forum-api-url
