--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.17.19",
+    "@types/dompurify": "^3.0.5",
     "@types/dotenv": "^6.1.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "dompurify": "^3.2.3",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.316.0",
     "next-themes": "^0.2.1",
