Auth redirect fix

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Authentication Configuration
+JWT_SECRET=your-secure-jwt-secret
+ALLOWED_DOMAINS=spryker.com
+COOKIE_DOMAIN=your-production-domain.com
+
+# SMTP Configuration for Magic Links
+SMTP_HOST=your-smtp-host
+SMTP_PORT=587
+SMTP_USER=your-smtp-username
+SMTP_PASS=your-smtp-password
+
 # AI API Configuration
 VITE_AI_MODEL=your-ai-model-name
 VITE_OPENROUTER_API_KEY=your-openrouter-api-key
