--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Access Configuration
+VITE_ACCESS_PASSWORD=your-secure-password
+
 # AI API Configuration
 VITE_AI_MODEL=your-ai-model-name
 VITE_OPENROUTER_API_KEY=your-openrouter-api-key
