--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.16",
     "openai": "^4.24.1",
+    "puppeteer": "^23.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.0",
